(rule
 (with-stdout-to
  alcotest-help.txt.actual
  (run examples/simple.exe --help=plain)))

(rule
 (target alcotest-help.txt.processed)
 (deps
  (:strip-randomness test/e2e/strip_randomness.exe))
 (action
  (with-outputs-to
   %{target}
   (run %{strip-randomness} %{dep:alcotest-help.txt}))))

(rule
 (alias runtest)
 (action
  (diff alcotest-help.txt alcotest-help.txt.processed)))
