version: "1.2.0+dune"
opam-version: "2.0"
name: "cmdliner"
synopsis: """Declarative definition of command line interfaces for OCaml"""
maintainer: ["Daniel Bünzli <daniel.buenzl i@erratique.ch>"]
authors: ["The cmdliner programmers"]
homepage: "https://github.com/dune-universe/cmdliner"
dev-repo: "git+https://github.com/dune-universe/cmdliner.git"
bug-reports: "https://github.com/dbuenzli/cmdliner/issues"
license: ["ISC"]
tags: ["cli" "system" "declarative" "org:erratique"]
depends: [
  "dune"
  "ocaml" {>= "4.08.0"}
]
build: [ "dune" "build" "-p" name "-j" jobs ]
description: """
Cmdliner allows the declarative definition of command line interfaces
for OCaml.

It provides a simple and compositional mechanism to convert command
line arguments to OCaml values and pass them to your functions. The
module automatically handles syntax errors, help messages and UNIX man
page generation. It supports programs with single or multiple commands
and respects most of the [POSIX][1] and [GNU][2] conventions.

Cmdliner has no dependencies and is distributed under the ISC license.

[1]: http://pubs.opengroup.org/onlinepubs/009695399/basedefs/xbd_chap12.html
[2]: http://www.gnu.org/software/libc/manual/html_node/Argument-Syntax.html

Home page: http://erratique.ch/software/cmdliner"""