(rule
 (action
  (write-file
   ; enable release renaming
   bin_conf_devversion.ml
   ; disable release renaming
   "include Bin_conf")))

(rule
 (action
  (write-file
   ocamlformat_lib.ml
   ; enable release renaming
   "include Ocamlformat_lib_devversion"
   ; disable release renaming
   )))

(library
 (public_name
  ; enable release renaming
  ocamlformat-devversion.bin_conf
  ; disable release renaming
  )
 (name
  ; enable release renaming
  bin_conf_devversion
  ; disable release renaming
  )
 (flags
  (:standard
   ; enable release renaming
   -open
   Ocamlformat_ocaml_common_devversion
   -open
   Ocamlformat_stdlib_devversion
   ; disable release renaming
   ))
 (instrumentation
  (backend bisect_ppx))
 (libraries
  ; enable release renaming
  ocamlformat-lib-devversion
  ; disable release renaming
  re))
