(rule
 (action
  (write-file
   ; enable release renaming
   bin_conf_dev.ml
   ; disable release renaming
   "include Bin_conf")))

(rule
 (action
  (write-file
   ocamlformat_lib.ml
   ; enable release renaming
   "include Ocamlformat_lib_dev"
   ; disable release renaming
   )))

(library
 (public_name
  ; enable release renaming
  ocamlformat-dev.bin_conf
  ; disable release renaming
  )
 (name
  ; enable release renaming
  bin_conf_dev
  ; disable release renaming
  )
 (flags
  (:standard
   ; enable release renaming
   -open
   Ocamlformat_ocaml_common_dev
   -open
   Ocamlformat_stdlib_dev
   ; disable release renaming
   ))
 (instrumentation
  (backend bisect_ppx))
 (libraries
  ; enable release renaming
  ocamlformat-dev.ocamlformat-lib
  ; disable release renaming
  re))
