(rule
 (action
  (write-file
   ocamlformat_lib.ml
   ; enable release renaming
   "include Ocamlformat_lib_dev"
   ; disable release renaming
   )))

(library
 (name ocamlformat_lib)
 (public_name ocamlformat-lib)
 (libraries
  ; enable release renaming
  ocamlformat-lib-dev
  ; disable release renaming
  ))
