(rule
 (action
  (write-file
   ocamlformat_lib.ml
   ; enable release renaming
   "include Ocamlformat_lib_multi_version_alpha1"
   ; disable release renaming
   )))

(library
 (name ocamlformat_lib)
 (public_name ocamlformat-lib)
 (libraries
  ; enable release renaming
  ocamlformat-lib-multi_version_alpha1
  ; disable release renaming
  ))
