(library
 (name ocamlformat_lib)
 (public_name ocamlformat-lib)
 (flags
  (:standard
   -open
   Common
   -open
   Ocaml_common
   -open
   Parser_extended
   -open
   Ocamlformat_stdlib
   -open
   Ocamlformat_result.Global_scope))
 (instrumentation
  (backend bisect_ppx))
 (libraries
  ocamlformat_lib_latest
  common
  conf
  format_
  ocaml_common
  parser_standard
  parser_extended
  parser_recovery
  ocamlformat_result
  ocamlformat_stdlib
  ocaml-version
  ocp-indent.lib
  odoc_parser
  uuseg.string
  dune-build-info))
