(rule
 (targets fmterr_removed_option.output)
 (deps removed_option/.ocamlformat)
 (action
  (with-outputs-to
   fmterr_removed_option.output
   (with-stdin-from
    %{dep:sample/a.ml}
    (with-accepted-exit-codes
     1
     (run %{bin:ocamlformat} --name removed_option/a.ml -))))))

(rule
 (alias runtest)
 (action
  (diff fmterr_removed_option.expected
    fmterr_removed_option.output)))

(rule
 (targets fmterr_removed_option_cmdline.output)
 (deps .ocamlformat)
 (action
  (with-outputs-to
   fmterr_removed_option_cmdline.output
   (with-stdin-from
    %{dep:sample/a.mli}
    (with-accepted-exit-codes
     1
     (run %{bin:ocamlformat} --root=. --name foo.ml --escape-chars preserve -))))))

(rule
 (alias runtest)
 (action
  (diff fmterr_removed_option_cmdline.expected
    fmterr_removed_option_cmdline.output)))

(rule
 (targets max_iter_1_failing.output)
 (deps .ocamlformat)
 (action
  (with-outputs-to
   %{targets}
   (with-accepted-exit-codes
    1
    (run %{bin:ocamlformat} --root=. --max-iters=1 %{dep:sample/b.ml})))))

(rule
 (alias runtest)
 (action
  (diff max_iter_1_failing.expected max_iter_1_failing.output)))

(rule
 (deps
  (source_tree roots/bad_version))
 (action
  (with-stderr-to
   ;; This test's stderr is ignored because it's not stable
   ;; (it contains the current git rev)
   %{null}
   (with-stdout-to
    conf_bad_version.output
    (with-stdin-from
     sample/a.ml
     (chdir
      roots/bad_version
      (with-accepted-exit-codes
       1
       (run %{bin:ocamlformat} --impl -))))))))

(rule
 (alias runtest)
 (action
  (diff conf_bad_version.expected conf_bad_version.output)))

(rule
 (deps
  (source_tree roots/malformed1))
 (action
  (with-outputs-to
   conf_malformed1.output
   (with-stdin-from
    sample/a.ml
    (chdir
     roots/malformed1
     (with-accepted-exit-codes
      1
      (run %{bin:ocamlformat} --impl -)))))))

(rule
 (alias runtest)
 (action
  (diff conf_malformed1.expected conf_malformed1.output)))

(rule
 (deps
  (source_tree roots/unknown_option))
 (action
  (with-outputs-to
   conf_unknown_option.output
   (with-stdin-from
    sample/a.ml
    (chdir
     roots/unknown_option
     (with-accepted-exit-codes
      1
      (run %{bin:ocamlformat} --impl -)))))))

(rule
 (alias runtest)
 (action
  (diff conf_unknown_option.expected conf_unknown_option.output)))

(rule
 (deps
  (source_tree roots/unknown_value))
 (action
  (with-outputs-to
   conf_unknown_value.output
   (with-stdin-from
    sample/a.ml
    (chdir
     roots/unknown_value
     (with-accepted-exit-codes
      1
      (run %{bin:ocamlformat} --impl -)))))))

(rule
 (alias runtest)
 (action
  (diff conf_unknown_value.expected conf_unknown_value.output)))

(rule
 (deps
  (source_tree roots/unknown_value))
 (action
  (with-outputs-to
   env_unknown_option.output
   (with-stdin-from
    sample/a.ml
    (setenv
     OCAMLFORMAT
     "unknown=true"
     (with-accepted-exit-codes
      1
      (run %{bin:ocamlformat} --impl -)))))))

(rule
 (alias runtest)
 (action
  (diff env_unknown_option.expected env_unknown_option.output)))

(rule
 (deps
  (source_tree roots/unknown_value))
 (action
  (with-outputs-to
   env_unknown_value.output
   (setenv
    OCAMLFORMAT
    "type-decl=unknown"
    (with-stdin-from
     sample/a.ml
     (with-accepted-exit-codes
      1
      (run %{bin:ocamlformat} --impl -)))))))

(rule
 (alias runtest)
 (action
  (diff env_unknown_value.expected env_unknown_value.output)))
