(rule
 (targets fmterr_removed_option.output)
 (deps removed_option/.ocamlformat)
 (action
  (with-outputs-to
   fmterr_removed_option.output
   (with-stdin-from
    %{dep:sample/a.ml}
    (with-accepted-exit-codes
     1
     (run %{bin:ocamlformat} --name removed_option/a.ml -))))))

(rule
 (alias runtest)
 (action
  (diff fmterr_removed_option.expected
    fmterr_removed_option.output)))

(rule
 (targets fmterr_removed_option_cmdline.output)
 (deps .ocamlformat)
 (action
  (with-outputs-to
   fmterr_removed_option_cmdline.output
   (with-stdin-from
    %{dep:sample/a.mli}
    (with-accepted-exit-codes
     1
     (run %{bin:ocamlformat} --root=. --name foo.ml --escape-chars preserve -))))))

(rule
 (alias runtest)
 (action
  (diff fmterr_removed_option_cmdline.expected
    fmterr_removed_option_cmdline.output)))

(rule
 (deps
  (source_tree roots/unknown_value))
 (action
  (with-outputs-to
   env_unknown_value.output
   (setenv
    OCAMLFORMAT
    "type-decl=unknown"
    (with-stdin-from
     sample/a.ml
     (with-accepted-exit-codes
      1
      (run %{bin:ocamlformat} --impl -)))))))

(rule
 (alias runtest)
 (action
  (diff env_unknown_value.expected env_unknown_value.output)))
