(rule
 (alias runtest)
 (deps
  (source_tree dir1))
 (package ocamlformat)
 (enabled_if
  (<> %{os_type} Win32))
 (action
  (run %{bin:ocamlformat} -n 1 -i dir1/dir2/ignore_1.ml)))

(rule
 (alias runtest)
 (deps
  (source_tree dir1))
 (package ocamlformat)
 (enabled_if
  (<> %{os_type} Win32))
 (action
  (run %{bin:ocamlformat} -n 1 -i dir1/dir2/ignore_2.ml)))
